# news_bot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  compact_and_publish.py  final.md  main.py  postprocess_md.py  publish.sh  publish_existing.py  publish_news.py  publish_workflow.py  pyproject.toml  requirements.txt  temp_0829.md  temp_0901.md  test_compact.py  test_compact_github_link.py  test_compact_save.py  test_date_format.py  test_discord_summary.py  test_final_workflow.py  test_kakao_formatter.py  test_link_preservation.py  test_openai_response.py  test_smolai_compact.py  test_summary.md  test_summary_high.md  test_weekly_robotics.py  test_weekly_robotics_final.py  test_weekly_robotics_headline.py  test_weekly_robotics_mock.py  test_weekly_robotics_simple.py  upload_markdown.py
docs/: POSTPROCESS.md
outputs/: README.md
src/: config.py  logger.py  markdown_utils.py  notifier.py  prompts.py  summarizer.py
src/formatters/: __init__.py  kakao.py
src/publishers/: base.py  discord.py  github.py  kakao.py
src/summarizers/: __init__.py  base.py  compact.py  smol_ai_news.py  smol_ai_with_link_preserve.py  weekly_robotics.py
src/summarizers/postprocessors/: __init__.py  base.py  smol_ai.py
src/utils/: link_preserver.py
